--- a/History.txt
+++ b/History.txt
@@ -1,23 +1,18 @@
-eventmachine_alignedperiodic Change Log
-=======================================
+# History for EventMachineAlignedPeriodic
 
-2.1.1 (April 13 2013)
----------------------
+## v2.1.1 (April 13 2013)
 
 * forgot to interpolate a token in a log message
 
-2.1.0 (April 13 2013)
----------------------
+## v2.1.0 (April 13 2013)
 
 * add a fourth arg to the constructor, an optional logger that must respond to #debug.  If provided, it logs exceptions in the periodic scheduler and the time of the next event after scheduling
 
-2.0.1 (April 7 2013)
---------------------
+## v2.0.1 (April 7 2013)
 
 * use thread mutex in periodic caller as well
 
-2.0.0 (April 4 2013)
---------------------
+## v2.0.0 (April 4 2013)
 
 * changed invocation style.  You now call start on the object rather than runner.go
 * added poke method to kick off the periodic event outside of normal times. Note that attempting to poke when the periodic scheduler is not running throws an exception
@@ -27,7 +22,6 @@ eventmachine_alignedperiodic Change Log
 * added an reader :nextevent with the time the next event should kick off
 * fixed arg to periodic event: should always reflect whether the method represents a full period or not
 
-1.0.0 (March 15 2013)
----------------------
+## v1.0.0 (March 15 2013)
 
 * initial version released on Github
